@@ -1,3 +1,7 @@
+2009-11-11  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvi: debpkghome: view home page of a debian package.
+
 2009-11-10  Ian Beckwith  <ianb@erislabs.net>
 
 	* New elvi: acronym, gcache (google cache).
